Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
Rosautotest maintains a journal file when running individual tests. To absolutely make sure that this journal file is stored on disk even when ReactOS crashes afterwards, it is opened with FILE_FLAG_NO_BUFFERING | FILE_FLAG_WRITE_THROUGH and FlushFileBuffers is called after every WriteFile.
This file is no longer written to disk in recent revisions (tested 2e1f594d5e3f25b3aaf2bd6a9ee76a03f5279f0b).
I've already regress-tested the bug down to the following range:
Build 20181106-0.4.10-release-0-g2be9148 works
Build 20190303-0.4.11-release-0-ged7305b does not work
Steps to Reproduce
- Install a regular ReactOS bootcd in a VM.
- Mount the VM hard disk and delete everything that's in \ReactOS\bin. Then extract the attached test EXEs from bin.7z
into that folder. - Extract the rosautotest.exe from rosautotest.7z
into \ReactOS\system32. - Unmount the VM hard disk and start ReactOS.
- Fire up a Command Prompt and enter "rosautotest /r".
- While the tests are running (they should take some minutes), fire up another Command Prompt and go to C:\Documents and Settings\Administrator\Application Data\rosautotest.
- Type "dir" to check the file size of "rosautotest.journal".
Working revisions show a file size > 0.
Current non-working revisions only show an empty file.
Attachments
Issue Links
- relates to
-
ONLINE-567 Setup a full AHK suite test bot
-
- Resolved
-