[NTDLL_APITEST] Add tests for alignment for NtWriteFile This mimics the usage of WriteFile which is done in rosautotest.

CORE-15973